--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.0'
+    compile 'com.github.PhilJay:MPAndroidChart:v2.1.6'
+    compile 'com.squareup.sqlbrite:sqlbrite:0.5.0'
 }
